--- a/UUJJ/static/css/rank/rank.css
+++ b/UUJJ/static/css/rank/rank.css
@@ -31,8 +31,8 @@ footer {
    height: 10vh;
 }
 #header-content {
-   width: 50vw;
-   max-width: 1360px;
+   width: 70vw;
+   max-width: 1700px;
    position: relative;
 }
 #Ranking_board {
@@ -63,7 +63,6 @@ footer {
    width: 5vw;
 }
 
-/* 보드 영역 */
 #card_title {
    width: 25vw;
    height: 5vh;
@@ -77,32 +76,37 @@ footer {
    background-color: #00000040;
    font-size: 0.6em;
    scrollbar-width: none;
-   overflow-x: auto; /* 수평 스크롤 활성화 */
-   overflow-y: hidden; /* 수직 스크롤 비활성화 */
-   cursor: grab; /* 드래그 가능한 커서 표시 */
-   white-space: nowrap; /* 아이템들이 줄바꿈되지 않고 한 줄로 표시되도록 */
+   overflow-x: auto; 
+   overflow-y: hidden;
+   cursor: grab; 
+   white-space: nowrap; 
    border-radius: 15px;
    box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 #board_area.active {
-   cursor: grabbing; /* 드래그 중일 때의 커서 표시 */
+   cursor: grabbing; 
 }
 #board_content {
    display: flex;
 }
 #board_item {
-   display: inline-block; /* 각 아이템들이 인라인 블록처럼 표시되도록 */
-   /* 아이템 간의 간격 조정 */
+   display: inline-block; 
    padding: 1em;
-   /* margin: 1em; */
 }
 #board_card {
-   user-select: none; /* 텍스트 선택을 비활성화 */
+   user-select: none; 
    width: 190px;
    height: 100%;
+   overflow : hidden;
 }
 #board_card > a {
    padding: 10%;
+}
+
+#board_card > img{
+   width: 150px;
+   height: 150px;
+   object-fit: cover;
 }
 /* 버튼 영역 및 호버 */
 #bt_area {
