--- a/UUJJ/templates/city/city.html
+++ b/UUJJ/templates/city/city.html
@@ -19,15 +19,15 @@
    </head>
    <body>
       <script>
-         var spaCityList = {{ spa_city_list|safe }};
-         var arboretumCityList = {{ arboretum_city_list|safe }};
-         var saunaCityList = {{ sauna_city_list|safe }};
-         var galleryCityList = {{ gallery_city_list|safe }};
+         var spaCityList = {{ spa_city_list | safe }};
+         var arboretumCityList = {{ arboretum_city_list | safe }};
+         var saunaCityList = {{ sauna_city_list | safe }};
+         var galleryCityList = {{ gallery_city_list | safe }};
 
-         var top5_spa = {{ top5_spa|safe }};
-         var top5_arboretum = {{ top5_arboretum|safe }};
-         var top5_sauna = {{ top5_sauna|safe }};
-         var top5_gallery = {{ top5_gallery|safe }};
+         var top5_spa = {{ top5_spa | safe }};
+         var top5_arboretum = {{ top5_arboretum | safe }};
+         var top5_sauna = {{ top5_sauna | safe }};
+         var top5_gallery = {{ top5_gallery | safe }};
       </script>
       <!-- 전체 크기 잡기 -->
       <section id="all-section">
@@ -64,7 +64,7 @@
                   </div>
                   <!-- 로고 -->
                   <div id="logo" class="d-flex justify-content-center">
-                     <a href="">
+                     <a href="http://127.0.0.1:8000/">
                         <img src="{%static 'img/logo.png'%}" alt="logo" />
                      </a>
                   </div>
