--- a/UUJJ/templates/rank/rank.html
+++ b/UUJJ/templates/rank/rank.html
@@ -140,7 +140,7 @@
             </section>
 
             <!-- 발 -->
-            <footer>곰발바닥</footer>
+            <footer></footer>
          </section>
       </section>
       <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
