--- a/UUJJ/templates/city/city.html
+++ b/UUJJ/templates/city/city.html
@@ -137,7 +137,7 @@
                </section>
             </section>
             <!-- 발 -->
-            <footer>곰발바닥</footer>
+            <footer></footer>
          </section>
       </section>
       <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
